# DeepSeek-TUI

./: CHANGELOG.md  README.md  config.example.toml
.github/: AUTHOR_MAP
crates/agent/src/: lib.rs
crates/app-server/src/: chat_completions.rs
crates/cli/src/: lib.rs
crates/config/src/: lib.rs  provider.rs  provider_defaults.rs  provider_kind.rs  tests.rs
crates/execpolicy/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  workroom.rs
crates/protocol/tests/: parity_protocol.rs
crates/release/src/: lib.rs
crates/secrets/src/: lib.rs
crates/state/src/: lib.rs
crates/tools/src/: lib.rs
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/locales/: en.json  es-419.json  ja.json  ko.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: artifacts.rs  client.rs  config.rs  config_persistence.rs  config_ui.rs  context_report.rs  dependencies.rs  hooks.rs  localization.rs  main.rs  (+17 more)
docs/: CONFIGURATION.md  CONTRIBUTORS.md  GUIDE.md  KEYBINDINGS.md  PROVIDERS.md  RUNTIME_API.md  RUNTIME_SIMPLIFICATION_DESIGN.md  SUBAGENTS.md  TOOL_SURFACE.md  V0865_REMAINING_AGENT_PROMPT.md  WORKROOM_ARCHITECTURE.md  WORKROOM_SECURITY.md
docs/architecture/: command-dispatch.md  pr-issue-evidence-prep.md
docs/rfcs/: 3209-workrooms.md
extensions/vscode/: README.md  package.json
integrations/weixin-bridge/: .env.example  README.md  package.json
scripts/: v0867-setup-qa.sh
scripts/remote-smoke/: README.md
web/lib/: docs-map.ts  github.test.ts  release-credits.ts
web/public/: install.sh
workflows/: stopship.workflow.js
(+101 files in other folders)
